test_programs/compile_failure/noirc_frontend_tests_traits_suggests_importing_trait_via_module_reexport/src/main.nr

    mod one {
        mod two {
            pub mod three {
                pub trait Trait {
                    fn method(self);
                }

                impl Trait for bool {
                    fn method(self) {}
                }
            }
        }

        pub use two::three;
    }

    fn main() {
        true.method()
    }
    